# ai-enterprise-system

./: .env.example  .replit  COMPLETION_SUMMARY.md  CURRENT_STATUS_REPORT.md  DELIVERABLES_SUMMARY.md  DOCUMENTATION_INDEX.md  EXECUTION_GUIDE_WEEK1.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_REPORT.md  INTEGRATION_GUIDE.md  PHASE_1_COMPLETE.md  PHASE_2_IMPLEMENTATION.md  PHASE_2_PROGRESS.md  QUICK_START.md  README.md  README_COMPLETE.md  UPGRADE_SUMMARY.md  docker-compose.yml  pyproject.toml  replit.md
admin-agent/: main.py  requirements.txt
ai-decision-engine/: main.py  requirements.txt
attached_assets/: Pasted--AI-ENTERPRISE-SYSTEM-Complete-System-Documentation-The_1775570306112.txt  Pasted-You-are-a-Senior-Staff-Engineer-Backend-Architect-DevOp_1775569324876.txt  Pasted-You-are-a-Senior-Staff-Engineer-Enterprise-Architect-De_1775568842785.txt  Pasted-You-are-a-Senior-Staff-Engineer-Enterprise-Architect-an_1775568781512.txt
backend/: config.py  enterprise.db  main.py
cognitive-core/: main.py
database/: postgresql.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md
finance-agent/: Dockerfile  main.py  requirements.txt
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
hr-agent/: main.py  requirements.txt
it-agent/: Dockerfile  main.py  requirements.txt
k8s/: ingress.yaml  namespace.yaml
legal-agent/: Dockerfile  main.py  requirements.txt
marketing-agent/: main.py  requirements.txt
orchestrator/: .env  Dockerfile  main.py  requirements.txt
product-agent/: main.py
qa-agent/: main.py
(+200 files in other folders)
