[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-enterprise-system"
version = "1.0.0"
description = "AI-Powered Autonomous Enterprise Management System"
authors = [
    {name = "Enterprise AI Team", email = "team@enterprise.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
    "redis>=5.0.1",
    "pika>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]
